# ffmpeg_cmake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
src/include/libavutil/: ffversion.h
